--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<hr>
 			<section class="section-work">
 				<article>
-					<a href="/character">
+					<a href="/character/">
 					<div class="work-text">
 						<h3>Character Art</h3>
 					</div>
