Added in Gallery Thumbnail Images

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h2>Featured Work</h2>
 			<hr>
 			<section class="section-work">
-				<article>
+				<article id="character">
 					<a href="/character">
 					<div class="work-text">
 						<h3>Character Art</h3>
@@ -32,7 +32,7 @@
 					-->
 					</a>
 				</article>
-				<article>
+				<article id="props">
 					<a href="/props">
 					<div class="work-text">
 						<h3>3D Props</h3>
@@ -44,7 +44,7 @@
 					-->
 					</a>
 				</article>
-				<article>
+				<article id="concept">
 					<a href="/concept">
 					<div class="work-text">
 						<h3>Concept Art</h3>
