Updated Index.html with a potential GitHub 404 Routing error fix

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<hr>
 			<section class="section-work">
 				<article id="character">
-					<a href="/character">
+					<a href="/character/index.html">
 					<div class="work-text">
 						<h3>Character Art</h3>
 					</div>
