--- a/character/index.html
+++ b/character/index.html
@@ -79,7 +79,7 @@
 		</footer>
         
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-	<script src="../js/script.js"></script>
+	<script async src="../js/script.js"></script>
         
     </body>
 </html>
