--- a/character/index.html
+++ b/character/index.html
@@ -52,9 +52,9 @@
 			</ul>
 			<footer>
 				<ul>
-					<li><a><i class="fa fa-linkedin-square"></i></a></li>
-					<li><a><i class="fa fa-envelope"></i></a></li>
-					<li><a><i class="fa fa-twitter-square"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/kylesarvas"><i class="fa fa-linkedin-square"></i></a></li>
+                    <li><a href="mailto:kylesarvas@gmail.com"><i class="fa fa-envelope"></i></a></li>
+					<li><a target="_blank" href="img/KyleSarvas_Resume.pdf"><i class="fa fa-file"></i></a></li>
 				</ul>
 				<h4>© 2017 Kyle Sarvas - All rights reserved</h4>
 			</footer>
