Updating Aside Nav and Welcome Button

--- a/index.html
+++ b/index.html
@@ -12,18 +12,16 @@
 		<header class="welcome">
 			<div class="welcome-text">
 				<h1>Kyle Sarvas</h1>
-				<a class="btn-ghost js--scroll-to-work" href="#work" >Featured Work</a>
+				<a class="btn-ghost js--scroll-to-work" href="#gallery" >View Work</a>
 				<!-- <a href="/resume" class="btn-ghost">Resume</a> -->
 			</div>
 		</header>
-        <main id="work">
-            <h2>Featured Work</h2>
-			<hr>
-			<section class="section-work">
+        <main id="gallery">
+			<section class="section-gallery">
 				<article id="character">
 					<a href="/character">
-					<div class="work-text">
-						<h3>Character Art</h3>
+					<div class="gallery-text">
+						<h3 class="inactive">Character Art</h3>
 					</div>
 					<!-- 
 					<picture>
@@ -34,8 +32,8 @@
 				</article>
 				<article id="props">
 					<a href="/props">
-					<div class="work-text">
-						<h3>3D Props</h3>
+					<div class="gallery-text">
+						<h3 class="inactive">3D Props</h3>
 					</div>
 					<!-- 
 					<picture>
@@ -46,8 +44,8 @@
 				</article>
 				<article id="concept">
 					<a href="/concept">
-					<div class="work-text">
-						<h3>Concept Art</h3>
+					<div class="gallery-text">
+						<h3 class="inactive">Concept Art</h3>
 					</div>
 					<!-- 
 					<picture>
@@ -60,7 +58,7 @@
 			<footer>
 				<ul>
 					<li><a href="https://www.linkedin.com/in/kylesarvas"><i class="fa fa-linkedin-square"></i></a></li>
-                    <li><a href="mailto:kylesarvas@gmail.com" target="_top"><i class="fa fa-envelope"></i></a></li>
+                    <li><a href="mailto:kylesarvas@gmail.com"><i class="fa fa-envelope"></i></a></li>
 					<li><a target="_blank" href="img/KyleSarvas_Resume.pdf"><i class="fa fa-file"></i></a></li>
 				</ul>
 				<h4>© 2017 Kyle Sarvas - All rights reserved</h4>
