--- a/character/index.html
+++ b/character/index.html
@@ -16,9 +16,10 @@
 					<img src="img/Logo.svg" alt="KSDESIGN Logo">
 				</div>
 				-->
-				<div class="header-title">
-					<a href="../"><h1>Kyle Sarvas</h1></a>
-				</div>
+				<a class="header-title" href="../">
+                    <i class="ion-home"></i>
+					<h1>Kyle Sarvas</h1>
+				</a>
                 <div class="header-nav-icon">
                     <a class="mobile-nav-icon js--nav-icon"><i class="ion-navicon"></i></a>
                 </div>
@@ -32,28 +33,52 @@
             </nav>
         </header>
 		<aside>
-			<a class="home" href="../">
-				<img src="../img/KyleSarvas_Pic.jpg">
+			<a class="aside-header-title" href="../">
+                <i class="ion-home"></i>
 				<h1>Kyle Sarvas</h1>
-				<hr class="section-hr">
 			</a>
-			<h2>Featured Work</h2>
-			<hr class="section-underline">
-			<ul class="aside-nav">
-				<li class="aside-nav-active">
-					<a href="/character">Character Art</a>
-				</li>
-				<li>
-					<a href="/props">3D Props</a>
-				</li>
-				<li>
-					<a href="/concept">Concept Art</a>
-				</li>
-			</ul>
-			<footer>
+			<section class="section-gallery">
+				<article id="character">
+					<a href="/character">
+					<div class="gallery-text">
+						<h3 class="active">Character Art</h3>
+					</div>
+					<!-- 
+					<picture>
+						<img src="img/Gallery_Thumb.jpg" alt="Character Art Gallery">
+					</picture> 
+					-->
+					</a>
+				</article>
+				<article id="props">
+					<a href="/props">
+					<div class="gallery-text">
+						<h3 class="inactive">3D Props</h3>
+					</div>
+					<!-- 
+					<picture>
+						<img src="img/Gallery_Thumb.jpg" alt="Environment Art Gallery">
+					</picture> 
+					-->
+					</a>
+				</article>
+				<article id="concept">
+					<a href="/concept">
+					<div class="gallery-text">
+						<h3 class="inactive">Concept Art</h3>
+					</div>
+					<!-- 
+					<picture>
+						<img src="img/Gallery_Thumb.jpg" alt="Concept Art and Illustration Gallery">
+					</picture> 
+					-->
+					</a>
+				</article>
+			</section>
+			<footer class="aside-footer">
 				<ul>
 					<li><a href="https://www.linkedin.com/in/kylesarvas"><i class="fa fa-linkedin-square"></i></a></li>
-                    <li><a href="mailto:kylesarvas@gmail.com" target="_top"><i class="fa fa-envelope"></i></a></li>
+                    <li><a href="mailto:kylesarvas@gmail.com"><i class="fa fa-envelope"></i></a></li>
 					<li><a target="_blank" href="../img/KyleSarvas_Resume.pdf"><i class="fa fa-file"></i></a></li>
 				</ul>
 				<h4>© 2017 Kyle Sarvas - All rights reserved</h4>
@@ -72,7 +97,7 @@
 		<footer class="work-footer">
 			<ul>
                 <li><a href="https://www.linkedin.com/in/kylesarvas"><i class="fa fa-linkedin-square"></i></a></li>
-                <li><a href="mailto:kylesarvas@gmail.com" target="_top"><i class="fa fa-envelope"></i></a></li>
+                <li><a href="mailto:kylesarvas@gmail.com"><i class="fa fa-envelope"></i></a></li>
                 <li><a target="_blank" href="../img/KyleSarvas_Resume.pdf"><i class="fa fa-file"></i></a></li>
             </ul>
 			<h4>© 2017 Kyle Sarvas - All rights reserved</h4>
