--- a/character/index.html
+++ b/character/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <title>Kyle Sarvas | Character Art</title>
+        <meta name="description" content="Kyle Sarvas's Online Portfolio; Character Art Gallery">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Kyle Sarvas | Character Art</title>
         <link rel="stylesheet" href="../css/main.css">
 		<link rel="stylesheet" href="../css/ionicons.min.css">
 		<link rel="stylesheet" href="../font-awesome/css/font-awesome.min.css">
@@ -11,14 +12,10 @@
     <body>
         <header>
 			<section class="header">
-					 <!-- 
-				<div class="header-logo">
-					<img src="img/Logo.svg" alt="KSDESIGN Logo">
-				</div>
-				-->
-				<div class="header-title">
-					<a href="../"><h1>Kyle Sarvas</h1></a>
-				</div>
+				<a class="header-title" href="../">
+                    <i class="ion-home"></i>
+					<h1>Kyle Sarvas</h1>
+				</a>
                 <div class="header-nav-icon">
                     <a class="mobile-nav-icon js--nav-icon"><i class="ion-navicon"></i></a>
                 </div>
@@ -32,28 +29,37 @@
             </nav>
         </header>
 		<aside>
-			<a class="home" href="../">
-				<img src="../img/KyleSarvas_Pic.jpg">
+			<a class="aside-header-title" href="../">
+                <i class="ion-home"></i>
 				<h1>Kyle Sarvas</h1>
-				<hr class="section-hr">
 			</a>
-			<h2>Featured Work</h2>
-			<hr class="section-underline">
-			<ul class="aside-nav">
-				<li class="aside-nav-active">
-					<a href="/character">Character Art</a>
-				</li>
-				<li>
-					<a href="/props">3D Props</a>
-				</li>
-				<li>
-					<a href="/concept">Concept Art</a>
-				</li>
-			</ul>
-			<footer>
+			<section class="section-gallery">
+				<article id="character">
+					<a href="/character">
+					<div class="gallery-text">
+						<h3 class="active">Character Art</h3>
+					</div>
+					</a>
+				</article>
+				<article id="props">
+					<a href="/props">
+					<div class="gallery-text">
+						<h3 class="inactive">3D Props</h3>
+					</div>
+					</a>
+				</article>
+				<article id="concept">
+					<a href="/concept">
+					<div class="gallery-text">
+						<h3 class="inactive">Concept Art</h3>
+					</div>
+					</a>
+				</article>
+			</section>
+			<footer class="aside-footer">
 				<ul>
 					<li><a href="https://www.linkedin.com/in/kylesarvas"><i class="fa fa-linkedin-square"></i></a></li>
-                    <li><a href="mailto:kylesarvas@gmail.com" target="_top"><i class="fa fa-envelope"></i></a></li>
+                    <li><a href="mailto:kylesarvas@gmail.com"><i class="fa fa-envelope"></i></a></li>
 					<li><a target="_blank" href="../img/KyleSarvas_Resume.pdf"><i class="fa fa-file"></i></a></li>
 				</ul>
 				<h4>© 2017 Kyle Sarvas - All rights reserved</h4>
@@ -61,18 +67,18 @@
 		</aside>
         <section class="section-work" id="work">
 			<ul>
-				<li><img src="../img/KyleSarvas_TheNomad"></li>
-				<li><img src="../img/KyleSarvas_FinalFantasyCactuar"></li>
-				<li><img src="../img/KyleSarvas_NPCArmorSet"></li>
-				<li><img src="../img/KyleSarvas_DjinnBust"></li>
-				<li><img src="../img/KyleSarvas_TonyStark"></li>
-				<li><img src="../img/KyleSarvas_AlienBust"></li>
+				<li><img src="../img/KyleSarvas_TheNomad" alt="Kyle Sarvas - The Nomad"></li>
+				<li><img src="../img/KyleSarvas_FinalFantasyCactuar" alt="Kyle Sarvas - Final Fantasy Cactuar"></li>
+				<li><img src="../img/KyleSarvas_NPCArmorSet" alt="Kyle Sarvas - NPC Armor Set"></li>
+				<li><img src="../img/KyleSarvas_DjinnBust" alt="Kyle Sarvas - Djinn Bust"></li>
+				<li><img src="../img/KyleSarvas_TonyStark" alt="Kyle Sarvas - Tony Stark"></li>
+				<li><img src="../img/KyleSarvas_AlienBust" alt="Kyle Sarvas - Alien Bust"></li>
 			</ul>
         </section>
 		<footer class="work-footer">
 			<ul>
                 <li><a href="https://www.linkedin.com/in/kylesarvas"><i class="fa fa-linkedin-square"></i></a></li>
-                <li><a href="mailto:kylesarvas@gmail.com" target="_top"><i class="fa fa-envelope"></i></a></li>
+                <li><a href="mailto:kylesarvas@gmail.com"><i class="fa fa-envelope"></i></a></li>
                 <li><a target="_blank" href="../img/KyleSarvas_Resume.pdf"><i class="fa fa-file"></i></a></li>
             </ul>
 			<h4>© 2017 Kyle Sarvas - All rights reserved</h4>
