--- a/concept/index.html
+++ b/concept/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <title>Kyle Sarvas | Concept Art</title>
+        <meta name="description" content="Kyle Sarvas's Online Portfolio; Concept Art Gallery">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Kyle Sarvas | Concept Art</title>
         <link rel="stylesheet" href="../css/main.css">
 		<link rel="stylesheet" href="../css/ionicons.min.css">
 		<link rel="stylesheet" href="../font-awesome/css/font-awesome.min.css">
@@ -11,14 +12,10 @@
     <body>
         <header>
 			<section class="header">
-					 <!-- 
-				<div class="header-logo">
-					<img src="img/Logo.svg" alt="KSDESIGN Logo">
-				</div>
-				-->
-				<div class="header-title">
-					<a href="../"><h1>Kyle Sarvas</h1></a>
-				</div>
+				<a class="header-title" href="../">
+                    <i class="ion-home"></i>
+					<h1>Kyle Sarvas</h1>
+				</a>
                 <div class="header-nav-icon">
                     <a class="mobile-nav-icon js--nav-icon"><i class="ion-navicon"></i></a>
                 </div>
@@ -33,47 +30,55 @@
             </nav>
         </header>
 		<aside>
-			<a class="home" href="../">
-				<img src="../img/KyleSarvas_Pic.jpg">
+			<a class="aside-header-title" href="../">
+                <i class="ion-home"></i>
 				<h1>Kyle Sarvas</h1>
-				<hr class="section-hr">
 			</a>
-			<h2>Featured Work</h2>
-			<hr class="section-underline">
-			<ul class="aside-nav">
-				<li>
-					<a href="/character">Character Art</a>
-				</li>
-				<li>
-					<a href="/props">3D Props</a>
-				</li>
-				<li class="aside-nav-active">
-					<a href="/concept">Concept Art</a>
-				</li>
-			</ul>
-			<footer>
+			<section class="section-gallery">
+				<article id="character">
+					<a href="/character">
+					<div class="gallery-text">
+						<h3 class="inactive">Character Art</h3>
+					</div>
+					</a>
+				</article>
+				<article id="props">
+					<a href="/props">
+					<div class="gallery-text">
+						<h3 class="inactive">3D Props</h3>
+					</div>
+					</a>
+				</article>
+				<article id="concept">
+					<a href="/concept">
+					<div class="gallery-text">
+						<h3 class="active">Concept Art</h3>
+					</div>
+					</a>
+				</article>
+			</section>
+			<footer class="aside-footer">
 				<ul>
 					<li><a href="https://www.linkedin.com/in/kylesarvas"><i class="fa fa-linkedin-square"></i></a></li>
-                    <li><a href="mailto:kylesarvas@gmail.com" target="_top"><i class="fa fa-envelope"></i></a></li>
+                    <li><a href="mailto:kylesarvas@gmail.com"><i class="fa fa-envelope"></i></a></li>
 					<li><a target="_blank" href="../img/KyleSarvas_Resume.pdf"><i class="fa fa-file"></i></a></li>
 				</ul>
-				<h4>© 2016 Kyle Sarvas - All rights reserved</h4>
+				<h4>© 2017 Kyle Sarvas - All rights reserved</h4>
 			</footer>
-		
 		</aside>
         <section class="section-work" id="work">
 			<ul>
-				<li><img src="../img/KyleSarvas_TempleGuardian"></li>
-				<li><img src="../img/KyleSarvas_DemonicRhinoBeast"></li>
-				<li><img src="../img/KyleSarvas_RuinicGuardian"></li>
-				<li><img src="../img/KyleSarvas_TheRighteousPath"></li>
-				<li><img src="../img/KyleSarvas_TheGhast"></li>
+				<li><img src="../img/KyleSarvas_TempleGuardian" alt="Kyle Sarvas - Temple Guardian"></li>
+				<li><img src="../img/KyleSarvas_DemonicRhinoBeast" alt="Kyle Sarvas - Demonic Rhino Beast"></li>
+				<li><img src="../img/KyleSarvas_RuinicGuardian" alt="Kyle Sarvas - Ruinic Guardian"></li>
+				<li><img src="../img/KyleSarvas_TheRighteousPath" alt="Kyle Sarvas - The Righteous Path"></li>
+				<li><img src="../img/KyleSarvas_TheGhast" alt="Kyle Sarvas - The Ghast"></li>
 			</ul>
         </section>
 		<footer class="work-footer">
 			<ul>
                 <li><a href="https://www.linkedin.com/in/kylesarvas"><i class="fa fa-linkedin-square"></i></a></li>
-                <li><a href="mailto:kylesarvas@gmail.com" target="_top"><i class="fa fa-envelope"></i></a></li>
+                <li><a href="mailto:kylesarvas@gmail.com"><i class="fa fa-envelope"></i></a></li>
                 <li><a target="_blank" href="../img/KyleSarvas_Resume.pdf"><i class="fa fa-file"></i></a></li>
             </ul>
 			<h4>© 2017 Kyle Sarvas - All rights reserved</h4>
