--- a/environment/index.html
+++ b/environment/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <title>Kyle Sarvas | Environment Art</title>
+        <meta name="description" content="Kyle Sarvas's Online Portfolio; Environment Art Gallery">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Kyle Sarvas | Environment Art</title>
         <link rel="stylesheet" href="../css/main.css">
 		<link rel="stylesheet" href="../css/ionicons.min.css">
 		<link rel="stylesheet" href="../font-awesome/css/font-awesome.min.css">
@@ -11,71 +12,25 @@
     <body>
         <header>
 			<section class="header">
-					 <!-- 
-				<div class="header-logo">
-					<img src="img/Logo.svg" alt="KSDESIGN Logo">
-				</div>
-				-->
-				<div class="header-title">
-					<a href="../"><h1>Kyle Sarvas</h1></a>
-				</div>
-                <div class="header-nav-icon">
-                    <a class="mobile-nav-icon js--nav-icon"><i class="ion-navicon"></i></a>
-                </div>
-                
+				<a class="header-title" href="../">
+                    <img class="header-icon" src="../img/logo-max.svg">
+				</a>
             </section>
-            <nav>
-                <ul class="main-nav js--main-nav">
-                    <li><a href="/character">Character Art</a></li>
-                    <li><a href="/props">3D Props</a></li>
-                    <li><a href="/concept">Concept Art</a></li>
-                </ul>
-            </nav>
         </header>
-		<aside>
-			<a class="home" href="../">
-				<img src="../img/KyleSarvas_Pic.jpg">
-				<h1>Kyle Sarvas</h1>
-				<hr class="section-hr">
-			</a>
-			<h2>Featured Work</h2>
-			<hr class="section-underline">
-			<ul class="aside-nav">
-				<li>
-					<a href="/character">Character Art</a>
-				</li>
-				<li class="aside-nav-active">
-					<a href="/environment">3D Props</a>
-				</li>
-				<li>
-					<a href="/concept">Concept Art</a>
-				</li>
-			</ul>
-			<footer>
-				<ul>
-					<li><a href="https://www.linkedin.com/in/kylesarvas"><i class="fa fa-linkedin-square"></i></a></li>
-                    <li><a href="mailto:kylesarvas@gmail.com" target="_top"><i class="fa fa-envelope"></i></a></li>
-					<li><a target="_blank" href="../img/KyleSarvas_Resume.pdf"><i class="fa fa-file"></i></a></li>
-				</ul>
-				<h4>© 2016 Kyle Sarvas - All rights reserved</h4>
-			</footer>
-		
-		</aside>
         <section class="section-work" id="work">
 			<ul>
-				<li><img src="../img/KyleSarvas_Toaster"></li>
-				<li><img src="../img/KyleSarvas_ElectricWhisker"></li>
-				<li><img src="../img/KyleSarvas_WeaponSheet_01"></li>
-				<li><img src="../img/KyleSarvas_Bow"></li>
-				<li><img src="../img/KyleSarvas_Spear"></li>
-				<li><img src="../img/KyleSarvas_Grimoire"></li>
-				<li><img src="../img/KyleSarvas_Mustang"></li>
+				<li><img src="../img/KyleSarvas_MoonGate_FinalC.jpg" alt="Kyle Sarvas - Abandoned Shrine Gate"></li>
+				<li><img src="../img/KyleSarvas_StoneLantern_Large_FinalC.jpg" alt="Kyle Sarvas - Stone Lantern Large"></li>
+				<li><img src="../img/KyleSarvas_StoneLantern_Small_Final.jpg" alt="Kyle Sarvas - Stone Lantern Small"></li>
+				<li><img src="../img/KyleSarvas_Rocks_Final.jpg" alt="Kyle Sarvas - Rocks"></li>
+				<li><img src="../img/KyleSarvas_FloorTiles_Final.jpg" alt="Kyle Sarvas - Floor Tiles"></li>
+				<li><img src="../img/KyleSarvas_Wall_Final.jpg" alt="Kyle Sarvas - Wall"></li>
 			</ul>
         </section>
 		<footer class="work-footer">
 			<ul>
                 <li><a href="https://www.linkedin.com/in/kylesarvas"><i class="fa fa-linkedin-square"></i></a></li>
-                <li><a href="mailto:kylesarvas@gmail.com" target="_top"><i class="fa fa-envelope"></i></a></li>
+                <li><a href="mailto:kylesarvas@gmail.com"><i class="fa fa-envelope"></i></a></li>
                 <li><a target="_blank" href="../img/KyleSarvas_Resume.pdf"><i class="fa fa-file"></i></a></li>
             </ul>
 			<h4>© 2017 Kyle Sarvas - All rights reserved</h4>
