--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <title>Kyle Sarvas | Portfolio</title>
+        <meta name="description" content="Kyle Sarvas's Online Portfolio">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Kyle Sarvas | Portfolio</title>
         <link rel="stylesheet" href="css/welcome.css">
 		<link rel="stylesheet" href="css/ionicons.min.css">
 		<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
@@ -11,61 +12,47 @@
     <body>
 		<header class="welcome">
 			<div class="welcome-text">
-				<h1>Kyle Sarvas</h1>
-				<a class="btn-ghost js--scroll-to-work" href="#work" >Featured Work</a>
-				<!-- <a href="/resume" class="btn-ghost">Resume</a> -->
+				<img class="welcome-text-name" src="../img/logo-min.svg">
+                <hr>
+                <img class="welcome-text-role" src="../img/logo-role.svg">
+				<a class="btn-ghost js--scroll-to-work" href="/environment" >View Work</a>
 			</div>
 		</header>
-        <main id="work">
-            <h2>Featured Work</h2>
-			<hr>
-			<section class="section-work">
+        <!--
+        <main id="gallery">
+			<section class="section-gallery">
 				<article id="character">
 					<a href="/character">
-					<div class="work-text">
-						<h3>Character Art</h3>
+					<div class="gallery-text">
+						<h3 class="inactive">Character Art</h3>
 					</div>
-					<!-- 
-					<picture>
-						<img src="img/Gallery_Thumb.jpg" alt="Character Art Gallery">
-					</picture> 
-					-->
 					</a>
 				</article>
 				<article id="props">
 					<a href="/props">
-					<div class="work-text">
-						<h3>3D Props</h3>
+					<div class="gallery-text">
+						<h3 class="inactive">3D Props</h3>
 					</div>
-					<!-- 
-					<picture>
-						<img src="img/Gallery_Thumb.jpg" alt="Environment Art Gallery">
-					</picture> 
-					-->
 					</a>
 				</article>
 				<article id="concept">
 					<a href="/concept">
-					<div class="work-text">
-						<h3>Concept Art</h3>
+					<div class="gallery-text">
+						<h3 class="inactive">Concept Art</h3>
 					</div>
-					<!-- 
-					<picture>
-						<img src="img/Gallery_Thumb.jpg" alt="Concept Art and Illustration Gallery">
-					</picture> 
-					-->
 					</a>
 				</article>
 			</section>
 			<footer>
 				<ul>
 					<li><a href="https://www.linkedin.com/in/kylesarvas"><i class="fa fa-linkedin-square"></i></a></li>
-                    <li><a href="mailto:kylesarvas@gmail.com" target="_top"><i class="fa fa-envelope"></i></a></li>
+                    <li><a href="mailto:kylesarvas@gmail.com"><i class="fa fa-envelope"></i></a></li>
 					<li><a target="_blank" href="img/KyleSarvas_Resume.pdf"><i class="fa fa-file"></i></a></li>
 				</ul>
 				<h4>© 2017 Kyle Sarvas - All rights reserved</h4>
 			</footer>
         </main>
+        -->
 		
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script async src="js/script.js"></script>
