--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
 				<img class="welcome-text-name" src="../img/logo-min.svg">
                 <hr>
                 <img class="welcome-text-role" src="../img/logo-role.svg">
-				<a class="btn-ghost js--scroll-to-work" href="/environment" >View Work</a>
+				<a class="btn-ghost" href="/environment" >View Work</a>
 			</div>
 		</header>
-    
     </body>
 </html>
