Updating header format

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header>
 			<section class="header">
 				<a class="header-title" href="">
-                    <img class="header-icon" src="img/logo-max.svg">
+                    <div class="header-title-left"><span class="title-text-lighter"><span class="title-letter-large">K</span>yle <span class="title-letter-large">S</span>arvas </span><span class="title-divider">|</span> <span class="title-text-darker"><span class="title-letter-medium">E</span>nvironment <span class="title-letter-medium">A</span>rtist</span></div>
 				</a>
                 <div class="header-nav-icon">
                     <a class="mobile-nav-icon js--nav-icon"><i class="ion-navicon"></i></a>
@@ -30,7 +30,7 @@
                 </ul>
             </nav>
         </header>
-        <section class="section-work" id="work">
+        <section class="section-work">
 			<ul>
 				<li><img src="../img/KyleSarvas_MoonGate_FinalC.jpg" alt="Kyle Sarvas - Abandoned Shrine Gate"></li>
 				<li><img src="../img/KyleSarvas_StoneLantern_Large_FinalC.jpg" alt="Kyle Sarvas - Stone Lantern Large"></li>
