--- a/contact/index.html
+++ b/contact/index.html
@@ -13,7 +13,7 @@
         <header>
 			<section class="header">
 				<a class="header-title" href="../">
-                    <img class="header-icon" src="../img/logo-max.svg">
+                    <div class="header-title-left"><span class="title-text-lighter"><span class="title-letter-large">K</span>yle <span class="title-letter-large">S</span>arvas </span><span class="title-divider">|</span> <span class="title-text-darker"><span class="title-letter-medium">E</span>nvironment <span class="title-letter-medium">A</span>rtist</span></div>
 				</a>
                 <div class="header-nav-icon">
                     <a class="mobile-nav-icon js--nav-icon"><i class="ion-navicon"></i></a>
@@ -31,7 +31,6 @@
             </nav>
         </header>
         <section class="section-contact">
-            
 			<ul>
                 <li><img class="picture" src="../img/KyleSarvas_Pic.jpg" alt="Kyle Sarvas - Picture"></li>
                 <li><img class="welcome-text-name" src="../img/logo-min.svg"></li>
@@ -40,11 +39,11 @@
 			</ul>
             <ul class="list-icons">
                 <li><a href="mailto:kylesarvas@gmail.com"><i class="fa fa-envelope"></i>kylesarvas@gmail.com</a></li>
-                <li><a href="https://www.linkedin.com/in/kylesarvas"><i class="fa fa-linkedin-square"></i>Linkedin</a></li>
+                <li><a href="https://www.linkedin.com/in/kylesarvas"><i class="fa fa-linkedin-square"></i>Linkedin Profile</a></li>
                 <li><a target="_blank" href="img/KyleSarvas_Resume.pdf"><i class="fa fa-file"></i>Resume</a></li>
             </ul>
         </section>
-		<footer class="work-footer">
+		<footer class="contact-footer">
 			<h4>© 2017 Kyle Sarvas - All rights reserved</h4>
 		</footer>
         
