Updated Contact Section

--- a/contact/index.html
+++ b/contact/index.html
@@ -30,7 +30,8 @@
                 </ul>
             </nav>
         </header>
-        <section class="section-contact">
+        <main>
+            <section class="section-contact">
 			<ul>
                 <li><img class="picture" src="../img/KyleSarvas_Pic.jpg" alt="Kyle Sarvas - Picture"></li>
                 <li><img class="welcome-text-name" src="../img/logo-min.svg"></li>
@@ -42,7 +43,26 @@
                 <li><a href="https://www.linkedin.com/in/kylesarvas"><i class="fa fa-linkedin-square"></i>Linkedin Profile</a></li>
                 <li><a target="_blank" href="img/KyleSarvas_Resume.pdf"><i class="fa fa-file"></i>Resume</a></li>
             </ul>
-        </section>
+            </section>
+            <section class="section-about">
+                <h1>About</h1>
+                <hr>
+                <p>I'm currently enrolled in a 2 year Digital Production program at the Gnomon School of Visual Effects. While attending classes at Gnomon, I'll be focusing on Environment Art and the PBR texturing process.</p>
+            </section>
+            <section class="section-software">
+                <h1>Software Proficiency</h1>
+                <hr>
+                <ul>
+                    <li><img src="../img/Maya.jpg"><p>Maya</p></li>
+                    <li><img  class="zbrush-icon" src="../img/ZBrush.svg"><p>ZBrush</p></li>
+                    <li><img src="../img/SD.png"><p>Substance Designer</p></li>
+                    <li><img src="../img/SP.png"><p>Substance Painter</p></li>
+                    <li><img src="../img/marmoset-logo.png"><p>Marmoset Toolbag</p></li>
+                    <li><img src="../img/unreal_engine.png"><p>Unreal Engine</p></li>
+                    <li><img src="../img/unity.png"><p>Unity Engine</p></li>
+                </ul>
+            </section>
+        </main>
 		<footer class="contact-footer">
 			<h4>© 2017 Kyle Sarvas - All rights reserved</h4>
 		</footer>
