Fixing Resume Link

--- a/contact/index.html
+++ b/contact/index.html
@@ -41,7 +41,7 @@
             <ul class="list-icons">
                 <li><a href="mailto:kylesarvas@gmail.com"><i class="fa fa-envelope"></i>kylesarvas@gmail.com</a></li>
                 <li><a href="https://www.linkedin.com/in/kylesarvas"><i class="fa fa-linkedin-square"></i>Linkedin Profile</a></li>
-                <li><a target="_blank" href="img/KyleSarvas_Resume.pdf"><i class="fa fa-file"></i>Resume</a></li>
+                <li><a target="_blank" href="../img/KyleSarvas_Resume.pdf"><i class="fa fa-file"></i>Resume</a></li>
             </ul>
             </section>
             <section class="section-about">
